--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=f87302d5e9ea96f1409063978a26eeb5",
-    "/css/app.css": "/css/app.css?id=c8c59ee0015b7c8072a5ce64d89630bc",
-    "/js/hotkeys.js": "/js/hotkeys.js?id=60b95061e721b635da02b5cc7792204b",
-    "/js/module.js": "/js/module.js?id=1f0206730b87684b7ad654a458319014",
-    "/js/simditor.js": "/js/simditor.js?id=e19ffe3d664de3d4228a9bd3573b4a6b",
-    "/js/uploader.js": "/js/uploader.js?id=0e7f04273d8e2a0a834c6884635bb6d9",
-    "/css/simditor.css": "/css/simditor.css?id=69eb7767d3b20549b33fafd8e1255363"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
