--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "mews/purifier": "~3.3",
         "overtrue/laravel-lang": "~6.0",
         "overtrue/pinyin": "~4.0",
+        "spatie/laravel-permission": "~5.8",
         "summerblue/laravel-active": "9.*"
     },
     "require-dev": {
