--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "overtrue/laravel-lang": "~6.0",
         "overtrue/pinyin": "~4.0",
         "spatie/laravel-permission": "~5.8",
-        "summerblue/laravel-active": "9.*"
+        "summerblue/laravel-active": "9.*",
+        "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.6",
